RESOLVED FIXED133655
[Mac] Hang when painting media before compositing mode activated
https://bugs.webkit.org/show_bug.cgi?id=133655
Summary [Mac] Hang when painting media before compositing mode activated
Jer Noble
Reported 2014-06-09 13:21:05 PDT
[Mac] Hang when painting media before compositing mode activated
Attachments
Patch (2.03 KB, patch)
2014-06-09 13:25 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-06-09 13:25:33 PDT
WebKit Commit Bot
Comment 2 2014-06-09 14:50:41 PDT
Comment on attachment 232727 [details] Patch Clearing flags on attachment: 232727 Committed r169720: <http://trac.webkit.org/changeset/169720>
WebKit Commit Bot
Comment 3 2014-06-09 14:50:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.